# ChatterBloke

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CRASHT.txt  GPU_SERVER_SETUP.md  LICENSE  MIRROR_MODE_FIX.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  QUICKSTART.md  README.md  SCRIPT_FIXES_SUMMARY.md  TECHPLAN.md  alembic.ini  check_python.py  download_chatterbox_models.py  fix_gpu_tensorflow.sh  fix_onnx_protobuf.sh  fix_protobuf.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  run_api.py  setup_gpu_server.sh  test_mirror_mode.py  test_script_editor.py  test_teleprompter.py
alembic/: env.py
alembic/versions/: ac75ea5ef42f_initial_migration.py
src/: main.py  model.tar
src/api/: app.py  client.py  dependencies.py  models.py
src/api/routers/: __init__.py  llm.py  script.py  tts.py  voice.py
src/dialogue/: __init__.py  main.py  main_window.py
src/dialogue/tabs/: __init__.py  audio_generator.py  dialogue_editor.py  project_manager.py  voice_studio.py
src/dialogue/widgets/: __init__.py  ai_dialogue_assistant.py
src/gui/: main_window.py  services.py  themes.py
src/gui/tabs/: script_editor.py  settings.py  teleprompter.py  voice_manager.py
src/gui/widgets/: __init__.py  ai_assistant.py  custom_widgets.py  loading_widget.py  notification.py  teleprompter_display.py  teleprompter_window.py  tts_generation_dialog.py
src/services/: ollama_service.py  tts_service.py
src/utils/: audio.py  cache.py  config.py  error_handler.py  performance.py
tests/: conftest.py  test_config.py  test_gui.py  test_models.py
