[tool.poetry]
name = "chatterbloke"
version = "0.1.0"
description = "Voice cloning and text-to-speech application"
authors = ["ChatterBloke Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"

[tool.poetry.group.audio.dependencies]
pyaudio = "^0.2.13"
librosa = "^0.10.1"
soundfile = "^0.12.1"
pydub = "^0.25.1"
pygame = "^2.5.2"

[tool.poetry.group.ml.dependencies]
ollama = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-qt = "^4.2.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pyinstaller = "^6.2.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"